[+] added repository factory abstract class and it`s implementation. Repository factory changed. Added docker-compose.yml and Dockerfile to run project via Docker. README.md changed. Main class specified in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -54,4 +54,18 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${project.parent.version}</version>
+                <configuration>
+                    <mainClass>it.server.web.Application</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
 </project>
