--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     active: file-logging
   datasource:
     driver-class-name: 'org.postgresql.Driver'
-    url: 'jdbc:postgresql://localhost:5433/test'
+    url: 'jdbc:postgresql://postgres:5432/test'
     username: 'test'
     password: 'test'
   logging:
